--- a/trunk/ssf/web/docroot/css/forum.css
+++ b/trunk/ssf/web/docroot/css/forum.css
@@ -79,6 +79,7 @@ ul.ss_nobullet li ul.ss_nobullet {
 
 h1.ss_entryTitle {
   font-weight: bold;
+  font-size: 18px;
   margin-bottom: .5em;
   margin-top: .5em;
   }
