--- a/trunk/ssf/web/docroot/css/forum.css
+++ b/trunk/ssf/web/docroot/css/forum.css
@@ -742,3 +742,102 @@ a.ss_smallLinkButton:focus, a.ss_smallLinkButton:hover, a.ss_smallLinkButton:act
   text-decoration: none;
   display: inline;
   }
+
+/* Calendar popup styles (used in the datepicker) */
+.ss_cpYearNavigation,
+.ss_cpMonthNavigation
+	{
+	background-color:#cecece;
+	text-align:center;
+	vertical-align:center;
+	text-decoration:none;
+	color:#FFFFFF;
+	font-weight:bold;
+	}
+.ss_cpDayColumnHeader,
+.ss_cpYearNavigation,
+.ss_cpMonthNavigation,
+.ss_cpCurrentMonthDate,
+.ss_cpCurrentMonthDateDisabled,
+.ss_cpOtherMonthDate,
+.ss_cpOtherMonthDateDisabled,
+.ss_cpCurrentDate,
+.ss_cpCurrentDateDisabled,
+.ss_cpTodayText,
+.ss_cpTodayTextDisabled,
+.ss_cpText
+	{
+	font-family:arial;
+	font-size:8pt;
+	}
+TD.ss_cpDayColumnHeader
+	{
+	text-align:right;
+	border:solid thin #cecece;
+	border-width:0 0 1 0;
+	}
+.ss_cpCurrentMonthDate,
+.ss_cpOtherMonthDate,
+.ss_cpCurrentDate
+	{
+	text-align:right;
+	text-decoration:none;
+	}
+.ss_cpCurrentMonthDateDisabled,
+.ss_cpOtherMonthDateDisabled,
+.ss_cpCurrentDateDisabled
+	{
+	color:#D0D0D0;
+	text-align:right;
+	text-decoration:line-through;
+	}
+.ss_cpCurrentMonthDate
+	{
+	color:#000000;
+	font-weight:bold;
+	}
+.ss_cpCurrentDate
+	{
+	color: #FFFFFF;
+	font-weight:bold;
+	}
+.ss_cpOtherMonthDate
+	{
+	color:#808080;
+	}
+TD.ss_cpCurrentDate
+	{
+	color:#FFFFFF;
+	background-color: #cecece;
+	border-width:1;
+	border:solid thin #000000;
+	}
+TD.ss_cpCurrentDateDisabled
+	{
+	border-width:1;
+	border:solid thin #FFAAAA;
+	}
+TD.ss_cpTodayText,
+TD.ss_cpTodayTextDisabled
+	{
+	border:solid thin #6677DD;
+	border-width:1 0 0 0;
+	}
+A.ss_cpTodayText,
+SPAN.ss_cpTodayTextDisabled
+	{
+	height:20px;
+	}
+A.ss_cpTodayText
+	{
+	color:black;
+	font-weight:bold;
+	}
+SPAN.ss_cpTodayTextDisabled
+	{
+	color:#D0D0D0;
+	}
+.ss_cpBorder
+	{
+	border:solid thin #808080;
+	}
